# net-clip

./: 前端.md  服务端.md  需求.md
clipboard_frontend/: package.json
clipboard_frontend/src-tauri/: Cargo.toml  tauri.conf.json
clipboard_frontend/src-tauri/src/: main.rs
clipboard_server/: .env  Cargo.toml  tables.sql
clipboard_server/src/: config.rs  main.rs
clipboard_server/src/database/: mod.rs  models.rs
clipboard_server/src/handlers/: auth.rs  clips.rs  mod.rs
clipboard_server/src/middlewares/: mod.rs
